# gitph

./: .gitignore  README.md  build.py  electron.vite.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: build.yml
scripts/: afterPack.cjs
src/gitph/: __init__.py  __main__.py  app.py  cli.py  config.py
src/gitph/domain/: __init__.py  events.py  models.py  state.py
src/gitph/git/: __init__.py  actions.py  client.py  errors.py  graph.py  parser.py
src/gitph/infra/: __init__.py  subprocess_runner.py
src/gitph/services/: __init__.py  action_service.py  refresh_service.py  repository_service.py
src/gitph/ui/: __init__.py
src/gitph/ui/screens/: __init__.py  confirm.py  context_menu.py  main.py  repo_picker.py
src/gitph/ui/styles/: app.tcss
src/gitph/ui/widgets/: __init__.py  commit_graph.py  details_panel.py  refs_sidebar.py  status_bar.py
src/main/: index.ts  repository-controller.ts  settings-store.ts
src/main/git/: action-service.ts  command-runner.ts  graph.ts  parser.ts  repository-service.ts  repository-watcher.ts  working-tree-service.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  diff.ts  file-status.ts  global.d.ts  main.tsx  styles.css
src/renderer/src/components/: ActivityRail.tsx  CommitGraph.tsx  DetailsPanel.tsx  DiffView.tsx  DiffWindow.tsx  EmptyState.tsx  Logo.tsx  Overlays.tsx  RefsSidebar.tsx  TitleBar.tsx  WorkingChangesPanel.tsx
src/renderer/src/hooks/: useWorkspace.ts
src/shared/: contracts.ts
