[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gitph"
version = "0.1.0"
description = "A modern Textual Git graph TUI."
requires-python = ">=3.13"
dependencies = [
    "textual==8.2.7",
]

[project.scripts]
gitph = "gitph.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gitph = ["ui/styles/*.tcss"]
